<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo_about_app"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:background="@mipmap/pin_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/drongo_text_about_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drongo_makes_possible"
        android:textSize="28sp"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_about_app"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/requirement1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requirement_1"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/drongo_text_about_app"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/requirement2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requirement_2"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/requirement1"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requirement_3"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/requirement2"
        android:layout_marginTop="50dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>