<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_secondary"
    android:fitsSystemWindows="true">

    <!--    Remove this line from View component to center the container vertically-->
    <!--    app:layout_constraintVertical_bias="0.3"-->


    <View
        android:id="@+id/login_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_border_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.297"
        app:layout_constraintWidth_percent="0.95" />

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@mipmap/cloud_logo"
        app:layout_constraintEnd_toEndOf="@+id/login_container"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="@+id/login_container"
        app:layout_constraintTop_toTopOf="@+id/login_container"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/drongo_textview_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/drongo"
        android:textAllCaps="true"
        android:textColor="@color/blue"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/login_container"
        app:layout_constraintStart_toStartOf="@+id/login_container"
        app:layout_constraintTop_toBottomOf="@id/logo_login" />

    <TextView
        android:id="@+id/slogan_textview_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/yellow"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/login_container"
        app:layout_constraintStart_toStartOf="@+id/login_container"
        app:layout_constraintTop_toBottomOf="@id/drongo_textview_login" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_border_input"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slogan_textview_login"
        app:layout_constraintWidth_percent="0.7" />

    <ImageView
        android:id="@+id/next_button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:src="@drawable/forward_arrow"
        android:text="@string/login"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/password_login"
        app:layout_constraintTop_toTopOf="@+id/password_login" />

    <TextView
        android:id="@+id/forgotten_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forgotten_password"
        android:textColor="@color/blue"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/login_container"
        app:layout_constraintStart_toStartOf="@+id/login_container"
        app:layout_constraintTop_toBottomOf="@id/password_login" />

</androidx.constraintlayout.widget.ConstraintLayout>