<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_secondary"
    android:fitsSystemWindows="true">


    <View
        android:id="@+id/update_user_info_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_border_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintWidth_percent="0.95" />

    <!--    Remove this line from View component to center the container vertically-->
    <!--    app:layout_constraintVertical_bias="0.3"-->


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_profile_picture_update_user_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/pin_logo"
        app:civ_border_color="@color/blue"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="@+id/update_user_info_container"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="@+id/update_user_info_container"
        app:layout_constraintTop_toTopOf="@+id/update_user_info_container"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/drongo_textview_update_user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/drongo"
        android:textAllCaps="true"
        android:textColor="@color/blue"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/update_user_info_container"
        app:layout_constraintStart_toStartOf="@+id/update_user_info_container"
        app:layout_constraintTop_toBottomOf="@id/user_profile_picture_update_user_info" />

    <TextView
        android:id="@+id/slogan_textview_update_user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/slogan"
        android:textAllCaps="true"
        android:textColor="@color/yellow"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/update_user_info_container"
        app:layout_constraintStart_toStartOf="@+id/update_user_info_container"
        app:layout_constraintTop_toBottomOf="@id/drongo_textview_update_user_info" />

    <EditText
        android:id="@+id/update_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_border_input"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:padding="5dp"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slogan_textview_update_user_info"
        app:layout_constraintWidth_percent="0.6"
        tools:hint="@string/username" />

    <ImageView
        android:id="@+id/button_update_user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:src="@drawable/forward_arrow"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/update_username"
        app:layout_constraintTop_toTopOf="@+id/update_username" />


    <ImageView
        android:id="@+id/back_button_update_user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:backgroundTint="@color/blue"
        android:src="@drawable/back_button_blue"
        android:text="@string/create_account"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/update_user_info_container"
        app:layout_constraintTop_toTopOf="@+id/user_profile_picture_update_user_info" />


</androidx.constraintlayout.widget.ConstraintLayout>