<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_secondary"
    android:fitsSystemWindows="true">


    <!--    Remove this line from View component to center the container vertically-->
    <!--    app:layout_constraintVertical_bias="0.3"-->


    <View
        android:id="@+id/register_username_container"
        android:layout_width="322dp"
        android:layout_height="442dp"
        android:background="@drawable/rounded_border_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169"
        app:layout_constraintWidth_percent="0.95" />

    <TextView
        android:id="@+id/slogan_textview_register_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/slogan"
        android:textAllCaps="false"
        android:textColor="@color/yellow"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/register_username_container"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="@+id/register_username_container"
        app:layout_constraintTop_toTopOf="@+id/logo_typography" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="200dp"
        android:text="@string/slogann"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/register_username_container"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="@+id/register_username_container"
        app:layout_constraintTop_toTopOf="@+id/logo_typography" />

    <EditText
        android:id="@+id/username_register"
        android:layout_width="211dp"
        android:layout_height="35dp"

        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_border_input"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/choose_username"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:padding="5dp"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slogan_textview_register_username"
        app:layout_constraintWidth_percent="0.7" />

    <ImageView
        android:id="@+id/next_button_register_username"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="313dp"
        android:background="@drawable/ic_next_icon"
        app:layout_constraintEnd_toEndOf="@+id/register_username_container"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="@+id/register_username_container"
        app:layout_constraintTop_toTopOf="@+id/register_username_container" />

    <ImageView
        android:layout_width="308dp"
        android:layout_height="195dp"
        android:layout_marginTop="144dp"
        android:background="@drawable/ic_typography_logo"
        app:layout_constraintEnd_toEndOf="@+id/register_username_container"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/register_username_container"
        app:layout_constraintTop_toTopOf="@+id/register_username_container" />

    <ImageView
        android:id="@+id/logo_typography"
        android:layout_width="129dp"
        android:layout_height="130dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/cloud_logo"
        app:layout_constraintEnd_toEndOf="@+id/register_username_container"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/register_username_container"
        app:layout_constraintTop_toTopOf="@+id/register_username_container" />

    <ImageView
        android:id="@+id/info_register_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:src="@drawable/ic_info"
        android:text="@string/create_account"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/register_username_container"
        app:layout_constraintTop_toTopOf="@+id/register_username_container" />


</androidx.constraintlayout.widget.ConstraintLayout>