<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_secondary"
    tools:context=".ui.activities.Scanner">

    <View
        android:id="@+id/scan_qr_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_border_container_qr_scanner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintWidth_percent="0.95" />

    <ImageView
        android:id="@+id/camera_icon"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_camera_outline"
        app:layout_constraintEnd_toEndOf="@+id/scan_qr_container"
        app:layout_constraintStart_toStartOf="@+id/scan_qr_container"
        app:layout_constraintTop_toTopOf="@+id/scan_qr_container" />

    <TextView
        android:id="@+id/move_camera_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/move_camera"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/scan_qr_container"
        app:layout_constraintStart_toStartOf="@+id/scan_qr_container"
        app:layout_constraintTop_toBottomOf="@+id/camera_icon"
        app:layout_constraintWidth_percent="0.6" />


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment"
        android:name="dsd.mdhfer.drongo.ui.fragments.ScanFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/scan_qr_container"
        app:layout_constraintHeight_percent="0.32"
        app:layout_constraintStart_toStartOf="@+id/scan_qr_container"
        app:layout_constraintTop_toBottomOf="@id/move_camera_text"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/show_qr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border_button"
        android:clickable="true"
        android:focusable="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/show_qr_code"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/scan_qr_container"
        app:layout_constraintEnd_toEndOf="@+id/scan_qr_container"
        app:layout_constraintStart_toStartOf="@+id/scan_qr_container"
        app:layout_constraintTop_toBottomOf="@+id/fragment" />

    <ImageView
        android:id="@+id/back_button_scanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:src="@drawable/back_button_blue"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/camera_icon"
        app:layout_constraintStart_toStartOf="@id/scan_qr_container"
        app:layout_constraintTop_toTopOf="@+id/scan_qr_container" />


</androidx.constraintlayout.widget.ConstraintLayout>